--- a/package.json
+++ b/package.json
@@ -3,22 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@redux-devtools/extension": "^3.2.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "bootstrap": "^5.2.3",
+    "formik": "^2.2.5",
+    "lottie-web": "^5.7.8",
     "moment": "^2.29.4",
+    "node-sass": "^7.0.3",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.3",
+    "react-google-login": "^5.2.2",
+    "react-inlinesvg": "^3.0.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.50.0",
     "socket.io-client": "^4.6.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
