--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-error-boundary": "^3.1.3",
     "react-google-login": "^5.2.2",
     "react-inlinesvg": "^3.0.1",
+    "react-loading-skeleton": "^3.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
