--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.2.3",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "emoji-picker-react": "^4.4.7",
     "formik": "^2.2.5",
     "lottie-web": "^5.7.8",
     "moment": "^2.29.4",
