--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.1",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.3",
     "react-google-login": "^5.2.2",
